--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ main{
 }
 
 .subtitulo{
-    background-color: teal;
+    background-color: green;
     padding: 10px;
     font-weight: 30px;
     font-size: 25px;
